--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -2,32 +2,32 @@ services:
   postgres:
     image: postgres:latest
     environment:
-      POSTGRES_DB: "authdb"
-      POSTGRES_USER: "riss"
-      POSTGRES_PASSWORD: "123"
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-      - "9001:5432"
+      - "${POSTGRES_SERVER_PORT}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
   pgadmin:
     image: dpage/pgadmin4
     environment:
-      PGADMIN_DEFAULT_EMAIL: "123@mail.ru"
-      PGADMIN_DEFAULT_PASSWORD: "123"
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
     ports:
-      - "8080:80"
+      - "${PGADMIN_SERVER_PORT}:80"
     depends_on:
       - postgres
 
   redis:
     image: redis:latest
     environment: 
-      REDIS_PASSWORD: 123
-      REDIS_USER: riss
-      REDIS_USER_PASSWORD: 123
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+      REDIS_USER: ${REDIS_USER}
+      REDIS_USER_PASSWORD: ${REDIS_USER_PASSWORD}
     ports:
-      - "6380:6379"
+      - "${REDIS_SERVER_PORT}:6379"
     volumes:
       - redisdata:/data
 
@@ -36,9 +36,29 @@ services:
     environment:
       SWAGGER_JSON: /swagger/auth.swagger.json
     ports:
-      - "8082:8080"
+      - "${SWAGGER_UI_SERVER_PORT}:8080"
     volumes:
       - ../docs/swagger:/swagger
+
+  auth-service:
+    image: auth-service
+    ports: 
+      - "${AUTH_SERVICE_PORT}:8888"
+    depends_on:
+      - gateway
+      - postgres
+      - redis
+  
+  gateway:
+    image: gateway
+    ports:
+      - "${GATEWAY_PORT}:8880"
+  
+  webhook:
+    image: webhook
+    ports:
+      - "${WEBHOOK_PORT}:9999"
+    
 volumes:
   postgres_data:
   redisdata:
